# check-assume-role-s3

./: Cargo.toml  README.md
src/: main.rs
