[package]
name = "check-assume-role"
version = "0.1.0"
edition = "2021"
publish = false
description = "Confirm that a role can be assumed with provided credentials"
authors = ["Peter C. Norton"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.8.0"
aws-sdk-sts = "0.8.0"
aws-sdk-s3 = "0.8.0"
serde_json = "1"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "3.1.5"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]

